fix - add missing margins && fix small alignment issues to the logo in media query

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -37,8 +37,12 @@ ul {
     color: #fff;
 }
 
+.footer__heading {
+    margin-bottom: 1.1rem;
+}
+
 .footer__heading__useful {
-    margin-bottom: 0.8rem;
+    margin-bottom: 1.1rem;
 }
 
 .section {
@@ -106,16 +110,24 @@ ul {
         padding: 4rem;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 0.3fr 1fr 0.5fr;
-        row-gap: 2.5rem;
+        row-gap: 2.9rem;
     }
 
     .footer__contact {
         justify-self: end;
     }
+
+    .footer__socials {
+        margin: 1rem 0;
+    }
+
+    .footer__end {
+        flex-direction: column;
+    }
 }
 
 
-@media (max-width: 887px) {
+@media (max-width: 723px) {
     footer {
         padding: 2.5rem;
         grid-template-columns: 1fr;
